fix icons not showing on mobile

--- a/src/components/HomepageMods/styles.module.css
+++ b/src/components/HomepageMods/styles.module.css
@@ -21,6 +21,7 @@
     display: inline-block;
     border-radius: 50%;
     width: calc(14% - 15px);
+    min-width: 32px;
     margin-right: 1rem;
     -webkit-transition: scale 0.3s;
     transition: scale 0.3s;
